installdir = $(libdir)/enigma2/python/Plugins/Extensions/OpenMultiboot/elftools/dwarf

install_PYTHON = \
	abbrevtable.py aranges.py callframe.py compileunit.py constants.py descriptions.py die.py dwarf_expr.py dwarfinfo.py enums.py __init__.py lineprogram.py locationlists.py namelut.py ranges.py structs.py
